--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <name>EtherealC</name>
     <description>Ethereal Client</description>
     <url>https://github.com/Ethereal-RPC/</url>
-    <packaging>pom</packaging>
-    <version>1.0.2</version>
+    <packaging>jar</packaging>
+    <version>1.0.5</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -146,6 +146,11 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <encoding>UTF-8</encoding>
+                            <charset>UTF-8</charset>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
