--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
         <dependency>
@@ -62,7 +63,22 @@
             <timezone>+8</timezone>
         </developer>
     </developers>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <profiles>
         <profile>
             <id>release</id>
@@ -106,9 +122,11 @@
                                 <source>1.8</source>
                                 <target>1.8</target>
                                 <encoding>UTF-8</encoding>
+                                <compilerArgs>
+                                    <arg>-parameters</arg>
+                                </compilerArgs>
                             </configuration>
                         </plugin>
-
                     </plugins>
                 </pluginManagement>
                 <plugins>
@@ -119,6 +137,9 @@
                         <configuration>
                             <target>1.8</target>
                             <source>1.8</source>
+                            <compilerArgs>
+                                <arg>-parameters</arg>
+                            </compilerArgs>
                         </configuration>
                     </plugin>
                     <plugin>
